test/official_tests/variable/collide_with_parameter.lox
fun foo(a) {
  var a; // error: {"line":2,"message":"Variable 'a' is already declared in this scope","type":"RuntimeError"}
}
